	  appear in one PO but the file moved to other domain, not scanned
	  in the same xgettext-perl run.
	- manual-page for xgettext-perl is missing
	- xgettext-perl does not yet support __*p* introduced by Log::Report
	  version 1.22.  It should probably accept variables as $msgctxt
	  argument, to make code maintainable.

wishlist:
	- let xgettext-perl produce mo files as well.

version 1.15:

	Improvements:
	- remove double dependency on Test::More
	  rt.cpan.org#171438 [Petr Pisar]
	- remove dependency on IO::File, not used
	  rt.cpan.org#171438 [Petr Pisar]
	- better set locale in test script
	  rt.cpan.org#171439 [Petr Pisar]

version 1.14: Mon  8 Sep 15:31:33 CEST 2025

	Changes:
	- require Perl 5.16 (2012)

	Fixes:
	- fix pod2usage
	  github merge#3 [Sam Kington]
	- understand 'use Log::Report' with minimal required version number
	  github merge#4 and #5 [Sam Kington]

	Improvements:
	- convert to OODoc 3.03

version 1.13: Tue  6 May 09:49:55 CEST 2025

	Changes:
	- move Log::Report::Extract::Template to Log::Report::Template::Extract.pm
	  in distribution Log-Report-Template.

	Fixes:
	- --no-cleanup option was broken.

	Improvements:
	- ::Extract::write() passes options to ::Lexicon writers.

version 1.12: Fri 18 Apr 17:10:11 CEST 2025

	Fixes:
	- binmode for POTcompact
	- confusion between option name 'lexicon' or 'lexicons', accept both.
	- find gmo files.
	- no translations for the declaration of the conversion routines in Log::Report

	Improvements:
	- add .gitignore
	- add translation table
	- extract Template understand FILTER

version 1.11: Thu Mar 22 23:32:11 CET 2018

	Release 1.10 seems to got lost on CPAN.  Upload a new one.

	Fixes:
	- fix metadata [Mohammad S Anwar]
	- $fh->binmode not supported before 5.12 [cpantesters]

version 1.10: Tue Jan 23 23:03:57 CET 2018

	Improvements:
	- typo, rt.cpan.org#123008 [Lukas Mai]
	- additional filename test in 30index.t
	- add debugging of fn0 to t/30index.t
	- convert to GIT
	- publish on GitHUB
